--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,7 @@ html::-webkit-scrollbar-thumb {
 body {
   background: #0d0d0d;
   background: #6e07ff;
-  /* background: #000000; */
+  /* background: #d5d5d5; */
   padding-bottom: 6.5rem;
  
 }
