--- a/css/style.css
+++ b/css/style.css
@@ -402,8 +402,9 @@ section {
 .home .content h3 {
   color: #fff;
   font-size: 4rem;
-  padding-bottom: .5rem;
+  padding-bottom: .2rem;
 }
+
 
 .home .content span {
   font-size: 3rem;
@@ -416,6 +417,7 @@ section {
   display: inline-block;
 }
 
+
 .home .content p {
   font-size: 1.5rem;
   color: #aaa;
@@ -423,7 +425,12 @@ section {
   padding: 1rem 0;
   line-height: 2;
 }
-
+.home .content #dilip-name {
+  color: rgb(255, 255, 255);
+  font-size: 2.8rem;
+  
+ 
+}
 
 .about .row {
   display: -webkit-box;
@@ -1032,5 +1039,16 @@ section {
   html {
     font-size: 50%;
   }
+}
+@media (max-width:380px){
+
+  html{
+    font-size: 20%;
+  }
+  .home .image img {
+    height: 20rem;
+    width: 20rem;
+  }
+
 }
 /*# sourceMappingURL=style.css.map */
