all_files_updated

--- a/css/style.scss
+++ b/css/style.scss
@@ -661,18 +661,18 @@ section{
   }
 
 }
-@media (max-width:380px){
+// @media (max-width:380px){
 
-  html{
-    font-size: 30%;
-  }
-  .home{
-    text-align: center;
-    gap:2rem;
+//   html{
+//     font-size: 30%;
+//   }
+//   .home{
+//     text-align: center;
+//     gap:0.1%;
 
-    .image img{
-      height: 20rem;
-      width: 20rem;
-    }
-  }
-}
+//     .image img{
+//       height: 20rem;
+//       width: 20rem;
+//     }
+//   }
+// }
