--- a/css/style.css
+++ b/css/style.css
@@ -1040,7 +1040,7 @@ section {
     font-size: 50%;
   }
 }
-@media (max-width:380px){
+/* @media (max-width:380px){
 
   html{
     font-size: 30%;
@@ -1048,7 +1048,7 @@ section {
   .home .image img {
     height: 20rem;
     width: 20rem;
-  }
+  } */
 
-}
+/* } */
 /*# sourceMappingURL=style.css.map */
